--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "eslint-plugin-react": "^6.9.0",
     "eslint-plugin-standard": "^2.0.1",
     "favicons": "^4.8.6",
+    "foundation-sites": "^6.4.4-rc1",
     "gatsby": "^1.9.45",
     "gatsby-link": "^1.6.17",
     "gatsby-plugin-postcss-sass": "^1.0.12",
     "gatsby-plugin-react-helmet": "^1.0.5",
     "gatsby-plugin-resolve-src": "^1.0.0",
     "gatsby-plugin-sitemap": "^1.2.5",
+    "gsap": "^1.20.3",
     "lodash": "^4.17.4",
     "postcss-cssnext": "^3.0.2",
     "postcss-reporter": "^5.0.0",
