--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "autoprefixer": "^7.1.4",
     "babel-eslint": "^7.1.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "concurrently": "^3.5.0",
     "eslint": "^3.14.0",
     "eslint-config-standard": "^6.2.1",
@@ -31,6 +32,7 @@
     "redux": "^3.7.2",
     "reduxsauce": "^0.7.0",
     "rimraf": "^2.6.2",
+    "scrollmagic": "^2.0.5",
     "stylelint": "^8.1.1",
     "stylelint-order": "^0.7.0"
   },
