--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-plugin-sitemap": "^1.2.5",
     "gsap": "^1.20.3",
     "lodash": "^4.17.4",
+    "modernizr": "^3.5.0",
     "postcss-cssnext": "^3.0.2",
     "postcss-reporter": "^5.0.0",
     "react-redux": "^5.0.6",
@@ -34,7 +35,8 @@
     "rimraf": "^2.6.2",
     "scrollmagic": "^2.0.5",
     "stylelint": "^8.1.1",
-    "stylelint-order": "^0.7.0"
+    "stylelint-order": "^0.7.0",
+    "uglify-js": "^3.1.3"
   },
   "keywords": [
     "gatsby"
