--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "foundation-sites": "^6.4.4-rc1",
     "gatsby": "^1.9.45",
     "gatsby-link": "^1.6.17",
+    "gatsby-plugin-nprogress": "^1.0.7",
     "gatsby-plugin-postcss-sass": "^1.0.12",
     "gatsby-plugin-react-helmet": "^1.0.5",
     "gatsby-plugin-resolve-src": "^1.0.0",
