--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby": "^1.9.45",
     "gatsby-link": "^1.6.17",
     "gatsby-plugin-nprogress": "^1.0.7",
+    "gatsby-plugin-offline": "^1.0.9",
     "gatsby-plugin-postcss-sass": "^1.0.12",
     "gatsby-plugin-react-helmet": "^1.0.5",
     "gatsby-plugin-resolve-src": "^1.0.0",
