--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "scrollmagic": "^2.0.5",
     "stylelint": "^8.1.1",
     "stylelint-order": "^0.7.0",
-    "uglify-js": "^3.1.3"
+    "uglify-js": "^3.1.3",
+    "whatwg-fetch": "^2.0.3"
   },
   "keywords": [
     "gatsby"
