Adds page transitions

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "eslint-plugin-standard": "^2.0.1",
     "favicons": "^4.8.6",
     "foundation-sites": "^6.4.4-rc1",
-    "gatsby": "^1.9.45",
+    "gatsby": "^1.9.114",
     "gatsby-link": "^1.6.17",
     "gatsby-plugin-nprogress": "^1.0.7",
     "gatsby-plugin-offline": "^1.0.9",
@@ -32,6 +32,7 @@
     "postcss-reporter": "^5.0.0",
     "react-redux": "^5.0.6",
     "react-router-redux": "^4.0.8",
+    "react-transition-group": "^2.2.1",
     "redux": "^3.7.2",
     "reduxsauce": "^0.7.0",
     "rimraf": "^2.6.2",
