--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-router-redux": "^4.0.8",
     "react-transition-group": "^2.2.1",
     "redux": "^3.7.2",
+    "redux-saga": "^0.16.0",
     "reduxsauce": "^0.7.0",
     "rimraf": "^2.6.2",
     "scrollmagic": "^2.0.5",
