--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "modernizr": "^3.5.0",
     "postcss-cssnext": "^3.0.2",
     "postcss-reporter": "^5.0.0",
+    "react-headroom": "^2.2.2",
     "react-redux": "^5.0.6",
     "react-router-redux": "^4.0.8",
     "react-transition-group": "^2.2.1",
