--- a/package.json
+++ b/package.json
@@ -5,16 +5,8 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "autoprefixer": "^7.1.4",
-    "babel-eslint": "^7.1.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "concurrently": "^3.5.0",
-    "eslint": "^3.14.0",
-    "eslint-config-standard": "^6.2.1",
-    "eslint-config-standard-jsx": "^3.2.0",
-    "eslint-config-standard-react": "^4.2.0",
-    "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-react": "^6.9.0",
-    "eslint-plugin-standard": "^2.0.1",
     "favicons": "^4.8.6",
     "foundation-sites": "^6.4.4-rc1",
     "gatsby": "^1.9.114",
@@ -41,7 +33,18 @@
     "stylelint": "^8.1.1",
     "stylelint-order": "^0.7.0",
     "uglify-js": "^3.1.3",
+    "universal-cookie": "^2.1.2",
     "whatwg-fetch": "^2.0.3"
+  },
+  "devDependencies": {
+    "babel-eslint": "^7.1.1",
+    "eslint": "^3.14.0",
+    "eslint-config-standard": "^6.2.1",
+    "eslint-config-standard-jsx": "^3.2.0",
+    "eslint-config-standard-react": "^4.2.0",
+    "eslint-plugin-promise": "^3.4.0",
+    "eslint-plugin-react": "^6.9.0",
+    "eslint-plugin-standard": "^2.0.1"
   },
   "keywords": [
     "gatsby"
