add textarea autoresize library

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "postcss-reporter": "^5.0.0",
     "react-headroom": "^2.2.2",
     "react-redux": "^5.0.6",
+    "react-textarea-autosize": "^5.2.1",
     "react-transition-group": "^2.2.1",
     "redux": "^3.7.2",
     "redux-saga": "^0.16.0",
