--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "autoprefixer": "^7.1.4",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-polyfill": "^6.26.0",
     "concurrently": "^3.5.0",
     "favicons": "^4.8.6",
     "foundation-sites": "^6.4.4-rc1",
@@ -40,6 +41,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
+    "babel-plugin-transform-regenerator": "^6.26.0",
     "eslint": "^3.14.0",
     "eslint-config-standard": "^6.2.1",
     "eslint-config-standard-jsx": "^3.2.0",
