--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-polyfill": "^6.26.0",
     "concurrently": "^3.5.0",
+    "custom-event-polyfill": "^0.3.0",
     "favicons": "^4.8.6",
     "foundation-sites": "^6.4.4-rc1",
     "gatsby": "^1.9.114",
