update lint to ignore data and graphql

--- a/.eslintrc
+++ b/.eslintrc
@@ -8,24 +8,26 @@
     "space-before-function-paren": [2, "never"],
     "comma-dangle": [2, "always-multiline"],
     "camelcase": [0],
-    "react/prop-types": [ 2,  { ignore: ["content", "color"], }],
+    "react/prop-types": [ 2,  { ignore: ["data", "color"], }],
   },
   "globals": {
-    "document": false,
-    "window": false,
-    "ScrollMagic": false,
-    "TimelineLite" : false,
-    "TimelineMax" : false,
-    "TweenLite" : false,
-    "TweenMax" : false,
     "Back" : false,
+    "BezierPlugin" : false,
     "Bounce" : false,
     "Circ" : false,
+    "CSSPlugin" : false,
     "Cubic" : false,
+    "describe" : false,
+    "document": false,
+    "Draggable" : false,
     "Ease" : false,
     "EaseLookup" : false,
     "Elastic" : false,
+    "expect" : false,
     "Expo" : false,
+    "fetch" : false,
+    "graphql": false,
+    "it" : false,
     "Linear" : false,
     "Power0" : false,
     "Power1" : false,
@@ -36,19 +38,18 @@
     "Quart" : false,
     "Quint" : false,
     "RoughEase" : false,
+    "ScrollMagic": false,
     "Sine" : false,
     "SlowMo" : false,
+    "SplitText" : false,
     "SteppedEase" : false,
     "Strong" : false,
-    "Draggable" : false,
-    "SplitText" : false,
-    "VelocityTracker" : false,
-    "CSSPlugin" : false,
     "ThrowPropsPlugin" : false,
-    "BezierPlugin" : false,
-    "fetch" : false,
-    "describe" : false,
-    "it" : false,
-    "expect" : false
+    "TimelineLite" : false,
+    "TimelineMax" : false,
+    "TweenLite" : false,
+    "TweenMax" : false,
+    "VelocityTracker" : false,
+    "window": false,
   }
 }
