add image sharp processing

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "favicons": "^4.8.6",
     "foundation-sites": "^6.4.4-rc1",
     "gatsby": "^1.9.114",
+    "gatsby-image": "^1.0.34",
     "gatsby-link": "^1.6.17",
     "gatsby-plugin-nprogress": "^1.0.7",
     "gatsby-plugin-offline": "^1.0.9",
@@ -19,7 +20,10 @@
     "gatsby-plugin-react-helmet": "^1.0.5",
     "gatsby-plugin-react-next": "^1.0.6",
     "gatsby-plugin-resolve-src": "^1.0.0",
+    "gatsby-plugin-sharp": "^1.6.27",
     "gatsby-plugin-sitemap": "^1.2.5",
+    "gatsby-source-filesystem": "^1.5.16",
+    "gatsby-transformer-sharp": "^1.6.17",
     "gsap": "^1.20.3",
     "lodash": "^4.17.4",
     "modernizr": "^3.5.0",
