update eslint and add stage lint pre-hook

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,33 +1,34 @@
 {
   "parser": "babel-eslint",
-  "extends": ["standard", "standard-react"],
-  "formatter": "eslint-pretty-formatter",
+  "extends": ["plugin:react/recommended", "standard", "standard-react"],
   "rules": {
+    "react/no-unescaped-entities": off,
+    "react/jsx-closing-bracket-location": [2],
+    "react/jsx-closing-tag-location": [2],
+    "react/display-name": [<enabled>, { "ignoreTranspilerName": true }],
     "import/no-webpack-loader-syntax": [0],
     "standard/no-callback-literal": [0],
     "space-before-function-paren": [2, "never"],
     "comma-dangle": [2, "always-multiline"],
     "camelcase": [0],
-    "react/prop-types": [ 2,  { ignore: ["data", "color"], }],
+    "react/prop-types": [ 2,  { "ignore": [ "data", "color"] }]
   },
   "globals": {
+    "document": false,
+    "window": false,
+    "ScrollMagic": false,
+    "TimelineLite" : false,
+    "TimelineMax" : false,
+    "TweenLite" : false,
+    "TweenMax" : false,
     "Back" : false,
-    "BezierPlugin" : false,
     "Bounce" : false,
     "Circ" : false,
-    "CSSPlugin" : false,
     "Cubic" : false,
-    "describe" : false,
-    "document": false,
-    "Draggable" : false,
     "Ease" : false,
     "EaseLookup" : false,
     "Elastic" : false,
-    "expect" : false,
     "Expo" : false,
-    "fetch" : false,
-    "graphql": false,
-    "it" : false,
     "Linear" : false,
     "Power0" : false,
     "Power1" : false,
@@ -38,18 +39,25 @@
     "Quart" : false,
     "Quint" : false,
     "RoughEase" : false,
-    "ScrollMagic": false,
     "Sine" : false,
     "SlowMo" : false,
-    "SplitText" : false,
     "SteppedEase" : false,
     "Strong" : false,
-    "ThrowPropsPlugin" : false,
-    "TimelineLite" : false,
-    "TimelineMax" : false,
-    "TweenLite" : false,
-    "TweenMax" : false,
+    "Draggable" : false,
+    "SplitText" : false,
     "VelocityTracker" : false,
-    "window": false,
-  }
+    "CSSPlugin" : false,
+    "ThrowPropsPlugin" : false,
+    "BezierPlugin" : false,
+    "fetch" : false,
+    "describe" : false,
+    "it" : false,
+    "expect" : false,
+    "graphql": false
+  },
+  "settings": {
+    "react": {
+      "createClass": "createClass"
+      }
+    }
 }
