--- a/package.json
+++ b/package.json
@@ -45,16 +45,24 @@
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
-    "babel-eslint": "^7.1.1",
+    "babel-eslint": "^8.2.1",
     "babel-plugin-transform-regenerator": "^6.26.0",
-    "eslint": "^3.14.0",
-    "eslint-config-standard": "^6.2.1",
-    "eslint-config-standard-jsx": "^3.2.0",
-    "eslint-config-standard-react": "^4.2.0",
-    "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-react": "^6.9.0",
-    "eslint-plugin-standard": "^2.0.1",
-    "prettier": "^1.6.1"
+    "eslint": "^4.15.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-config-standard-jsx": "^4.0.2",
+    "eslint-config-standard-react": "^5.0.0",
+    "eslint-formatter-pretty": "^1.3.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-react": "^7.5.1",
+    "eslint-plugin-standard": "^3.0.1",
+    "http-server": "^0.11.1",
+    "husky": "^0.14.3",
+    "lint-staged": "^6.0.0",
+    "prettier": "^1.6.1",
+    "stylelint": "^8.4.0",
+    "stylelint-order": "^0.7.0"
   },
   "keywords": [
     "gatsby"
@@ -63,10 +71,20 @@
   "main": "n/a",
   "scripts": {
     "start": "gatsby develop -p 3000",
+    "serve": "http-server ./public -p 8000",
     "build": "gatsby build && npm run build:post",
-    "build:post": "NODE_ENV=production node scripts",
+    "build:post": "node scripts",
     "develop": "gatsby develop -p 3000",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write 'src/**/*.js'",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint --format=pretty --ignore-path .gitignore .",
+    "lint:staged": "lint-staged",
+    "precommit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --format=pretty --fix"
+    ],
+    "*.scss": "stylelint"
   }
 }
