--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "modernizr": "^3.5.0",
     "postcss-cssnext": "^3.0.2",
     "postcss-reporter": "^5.0.0",
+    "prop-types": "^15.6.1",
     "react-headroom": "^2.2.2",
     "react-redux": "^5.0.6",
     "react-textarea-autosize": "^5.2.1",
