add prismic dom, js and react packages

--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "modernizr": "^3.5.0",
     "postcss-cssnext": "^3.0.2",
     "postcss-reporter": "^5.0.0",
+    "prismic-dom": "^2.1.0",
+    "prismic-javascript": "^1.5.0-beta.2",
+    "prismic-reactjs": "^0.3.0",
     "prop-types": "^15.6.1",
     "react-headroom": "^2.2.2",
     "react-redux": "^5.0.6",
