--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "prismic-javascript": "^1.5.0-beta.2",
     "prismic-reactjs": "^0.3.0",
     "prop-types": "^15.6.1",
+    "query-string": "^6.0.0",
     "react-headroom": "^2.2.2",
     "react-redux": "^5.0.6",
     "react-textarea-autosize": "^5.2.1",
